# Credaly

./: .gitignore  DPIA.md  MONITORING.md  Makefile  docker-compose.prod.yml  docker-compose.yml  package-lock.json  package.json  run-dev.bat
.github/workflows/: ci.yml
.qwen/: settings.json
k8s/: admin-api.yaml  celery.yaml  namespace.yaml  scoring-api-configmap.yaml  scoring-api.yaml  secrets-template.yaml
sdks/python/: README.md  pyproject.toml
sdks/python/credaly/: __init__.py  client.py  exceptions.py  types.py
sdks/python/tests/: __init__.py  test_client.py
sdks/typescript/: README.md  package-lock.json  package.json
sdks/typescript/src/: client.ts  exceptions.ts  index.ts  types.ts
sdks/typescript/tests/: client.test.ts
services/admin-api/: .env.example  Dockerfile  package.json
services/admin-api/src/: app.module.ts  main.ts
services/admin-api/src/api-key-mgmt/: api-key.controller.ts  api-key.entity.ts  api-key.module.ts  api-key.service.ts
services/admin-api/src/auth/: admin-user.entity.ts  auth.controller.ts  (+3 more)
services/admin-api/test/: app.e2e-spec.ts
services/scoring-api/: .env.example  Dockerfile  alembic.ini  requirements.txt
services/scoring-api/alembic/: env.py  script.py.mako
services/scoring-api/scripts/: generate_sandbox_data.py  run_consent_expiry_cleanup.py  run_retention_cleanup.py  train_baseline_model.py  train_models.py
services/scoring-api/src/: __init__.py  main.py
services/scoring-api/tests/: __init__.py  conftest.py  test_comprehensive.py  test_consent.py  test_health.py  test_outcomes.py  test_scoring.py
(+86 files in other folders)
