[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "credaly"
version = "1.0.0"
description = "Official Python SDK for the Credaly Predictive Behavioral Credit API"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "Credaly Engineering", email = "engineering@credaly.com"},
]
keywords = ["credit-scoring", "fintech", "africa", "ml", "alternative-data"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.21",
    "responses>=0.23",
]

[project.urls]
Homepage = "https://credaly.com"
Documentation = "https://docs.credaly.com"
Repository = "https://github.com/credaly/credaly-python"
Issues = "https://github.com/credaly/credaly-python/issues"

[tool.setuptools.packages.find]
include = ["credaly*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
